# fairy

./: .dir-locals.el  Cargo.toml  README.md
src/: main.rs
