[package]
name = "fairy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3"


[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true